# my-cs336-assignment2

./: .gitignore  pyproject.toml
cs336-basics/: pyproject.toml
cs336_systems/: benchmark_attention.py  benchmarking_script.py  ddp_overlap_bucketed.py  ddp_overlap_individual_parameters.py  ddp_overlap_individual_parameters_benchmarking.py  distributed_communication_single_node.py  example_triton.py  naive_ddp.py  naive_ddp_benchmarking.py  optimizer_state_sharding.py  pytorch_flash_attn_2.py  test_my_naive_ddp.py  triton_flash_attn_2.py
tests/: adapters.py
