[project]
name = "cs336-systems"
version = "1.0.5"
description = "CS336 Assignment 2 - Systems"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "cs336-basics",
    "humanfriendly",
    "matplotlib",
    "numpy",
    "pytest>=8",
    "regex>=2024.11.6",
    "torch>=2.7,<2.8; sys_platform != 'darwin' or platform_machine != 'x86_64'",
    "tqdm>=4.67.1",
    "wandb>=0.19.7",
    "pandas>=2",
    "tabulate>=0.9.0",
    "ty>=0.0.1a16",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
cs336-basics = { path = "./cs336-basics", editable = true }
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }
torchaudio = { index = "pytorch-cu128" }